# verihogg-format

./: .clang-format  .clang-tidy  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.nix  default.nix  flake.nix  shell.nix
.github/workflows/: build.yml  clang-format.yml  clang-tidy.yml  docker-build.yml  docker-publish.yml  docker-push.yml
formatter/include/: formatter.h
formatter/include/cli/: format_args.h
formatter/include/data/: format_style.h  format_token.h  format_warning.h  lex_context.h  token_partition_tree.h  unwrapped_line.h
formatter/include/pipeline/: compiler_directives.h  line_joiner.h  line_wrap_searcher.h  policy_assigner.h  printer.h  runner.h  tabular_aligner.h  token_annotator.h  token_normalizer.h  tree_unwrapper.h
formatter/src/: formatter.cpp  main.cpp
formatter/src/data/: lex_context.cpp  unwrapped_line.cpp
formatter/src/pipeline/: format_args.cpp  line_joiner.cpp  line_wrap_searcher.cpp  policy_assigner.cpp  printer.cpp  runner.cpp  tabular_aligner.cpp  token_annotator.cpp  token_normalizer.cpp  tree_unwrapper.cpp
formatter/tests/: format_args_test.cpp  line_joiner_test.cpp  line_wrap_searcher_test.cpp  printer_test.cpp  scr1_tests.cpp  tabular_align_test.cpp  test_tree_unwrapper.cpp  token_annotator_test.cpp
nix/: shared.nix
scripts/: check-format.sh  format.sh  lint.sh
tests/: CMakeLists.txt  test_tree_unwrapper.cpp
